@@ -17,8 +17,6 @@ package org.apache.lucene.analysis.pl;
  * limitations under the License.
  */
 
-import java.io.BufferedInputStream;
-import java.io.DataInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.Reader;
@@ -50,6 +48,9 @@ public final class PolishAnalyzer extends StopwordAnalyzerBase {
   /** File containing default Polish stopwords. */
   public final static String DEFAULT_STOPWORD_FILE = "stopwords.txt";
   
+  /** File containing default Polish stemmer table. */
+  public final static String DEFAULT_STEMMER_FILE = "stemmer_20000.tbl";
+  
   /**
    * Returns an unmodifiable instance of the default stop words set.
    * @return default stop words set.
@@ -76,16 +77,8 @@ public final class PolishAnalyzer extends StopwordAnalyzerBase {
         throw new RuntimeException("Unable to load default stopword set", ex);
       }
       
-      InputStream stream = PolishAnalyzer.class.getResourceAsStream("stemmer_20000.tbl");
       try {
-        DataInputStream in = new DataInputStream(new BufferedInputStream(stream));
-        String method = in.readUTF().toUpperCase();
-        if (method.indexOf('M') < 0) {
-          DEFAULT_TABLE = new org.egothor.stemmer.Trie(in);
-        } else {
-          DEFAULT_TABLE = new org.egothor.stemmer.MultiTrie2(in);
-        }
-        in.close();
+        DEFAULT_TABLE = StempelStemmer.load(PolishAnalyzer.class.getResourceAsStream(DEFAULT_STEMMER_FILE));
       } catch (IOException ex) {
         // default set should always be present as it is part of the
         // distribution (JAR)
